fixes to text-align for min-fetured

--- a/style.css
+++ b/style.css
@@ -186,7 +186,7 @@ body{background-image:url('images/bg.jpg');-webkit-background-size:100%; /*Saf3-
 .flex-control-nav{width: 50px; position: relative;}
 .flexbuttons li {padding-bottom:  25px;}
 .flexbuttons li a{ font: 22px "Droid Serif Italic", serif; color:#b27557; text-decoration: none; font-style: italic; }
-.mini{}
+.mini{text-align:center;}
 .description {padding-top: 15px;}
 .menu{float:right;}
 .post {}
